--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "dev": "nodemon server.js",
     "deploy": "node server.js",
     "react": "react-scripts test",
     "eject": "react-scripts eject"
