--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "framer-motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.1",
+    "tailwindcss": "^4.1.11",
+    "tilt.js": "^1.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
